trying to fix padding because margins were running into each other, div color was not showing up

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,8 +1,8 @@
 div.page.header {
-	background-color: white;
+	background-color: $white;
 	overflow: auto;
 	position: absolute;
-	// border: 1px solid blue;
+	border: 1px solid blue;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	top: 0px;
