--- a/src/styles/components/_resume.scss
+++ b/src/styles/components/_resume.scss
@@ -13,8 +13,9 @@
 	@include media($mobile) {
 		@include span-columns(10);
 		@include shift(1);
-		margin-top: 80px;
-		margin-bottom: 80px;
+		border: 1px solid blue;
+		padding-top: 70px;
+		margin-bottom: 70px;
 
 		p {
 			font-size: 16px;
