--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,9 +54,6 @@ html, body {
 }
 
 .content-container {
-	border: 1px solid blue;
-	background: white;
-	z-index: -1;
 	@include span-columns(12);
 	height: 100%;
 	overflow-y: auto;
